tests/instantiating/range_negative_left_bound/stderr.golden
error: negative range left bound -1
bus.fbd +3:13
   |
 3 |     range = -1:0
   |             ^^^^
